--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-
+spring.security.oauth2.resourceserver.jwt.issuer-uri=
+keycloak.admin.auth.url=
+keycloak.admin.auth.client.id=
+keycloak.admin.auth.client.secret=
+keycloak.admin.auth.username=
+keycloak.admin.auth.password=
+keycloak.admin.auth.granttype=
+keycloak.admin.users.url=
 files.path=
