implement a method that get answer and add Q/A system from azure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+files.path=C:\audio
+spring.web.resources.statc-locations=file:///C:/audio/
 
-files.path=
+azure.questionanswering.endpoint=
+azure.questionanswering.api-key=
